[workspace]

[package]
name    = "hc-wled"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hc-wled"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1", features = ["full"] }
rumqttc            = "0.24"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender   = "0.2"
reqwest            = { version = "0.12", features = ["json"] }
tokio-tungstenite  = { version = "0.24", features = ["connect"] }
futures-util       = "0.3"
